# bromium

./: .gitignore  ANALYSIS.md  BUGS_6_AND_7_DETAILED.md  Cargo.toml  ControlTypes.txt  README.md  bromium.pyi  build.rs  compilation_errors.txt  for_transferring  pyproject.toml  test_app_launch.py
.github/workflows/: CI.yml
crates/bromium/: Cargo.toml  Class_Diagram.pptx  README.md  bromium.pyi
crates/bromium/examples/: app_launch.py  test_bug_fixes.py  test_singleton.py  test_staleness.py  usage.py
crates/bromium/src/: app_control.rs  commons.rs  context.rs  lib.rs  logging.rs  macros.rs  rectangle.rs  uiauto.rs  windriver.rs  xpath.rs
crates/screen-capture/: Cargo.toml  README.md
crates/screen-capture/examples/: focused_window.rs  monitor.rs  monitor_capture.rs  monitor_record.rs  monitor_region_capture.rs  window.rs  window_capture.rs  window_capture_from_HWND.rs
crates/screen-capture/src/: error.rs  lib.rs  monitor.rs  video_recorder.rs  window.rs
crates/screen-capture/src/mswindows/: capture.rs  impl_monitor.rs  impl_video_recorder.rs  impl_window.rs  mod.rs  utils.rs
crates/uiexplore/: Cargo.toml  README.md
crates/uiexplore/src/: app_ui.rs  commons.rs  lib.rs  macros.rs  main.rs  rectangle.rs  signal_file.rs
crates/uitree/: Cargo.toml
crates/uitree/src/: commons.rs  conversion.rs  lib.rs  main.rs  save_ui_element.rs  tree_map.rs  uiexplore.rs  uiexplore_iter.rs  uiexplore_xml.rs  xml.bck1  xml.rs
crates/winevent-monitor/: Cargo.toml
crates/winevent-monitor/src/: lib.rs  winevent.rs
crates/xmlutil/: Cargo.toml
crates/xmlutil/src/: lib.rs  pretty_print.rs  xml.rs  xpath_eval.rs  xpath_gen.rs
examples/: app_launch.py  logging_example.py  usage.py
scripts/: rename.sh  undo_rename.sh
src/: bindings.rs  context.rs  lib.rs  logging.rs  rectangle.rs  tree_map.rs  uiauto.rs  uiexplore.rs  windriver.rs  xpath.rs
src/cpp/: UiTreeWalk.cpp  exports.cpp  stdafx.h  targetver.h
