[package]
name = "bromium"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bromium"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
uiautomation = "0.18.0"
windows = { version = "0.61.1", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
regex = "1.5"
winapi = { version = "0.3", features = ["winuser"] } 
winnow = "0.7.9"
lazy_static = "1.5.0"

# Logging dependencies
log = "0.4"              # Standard Rust logging facade
env_logger = "0.11"      # Environment-based logger implementation
chrono = "0.4"           # Date/time handling for timestamps
dirs = "5.0"             # Cross-platform directory handling

[build-dependencies]
cc = "1.0"