[package]
name = "bromium"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bromium"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
uiautomation = "0.18.0"
windows = { version = "0.61.1", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
regex = "1.5"
winapi = { version = "0.3", features = ["winuser"] } 
winnow = "0.7.9"
# lazy_static = "1.5.0"

[build-dependencies]
cc = "1.0"
