[package]
name = "bromium"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bromium"
crate-type = ["cdylib"]

[dependencies]
screen-capture = { path = "../screen-capture" }
uitree = { path = "../uitree" }
pyo3 = "0.24.0"
uiautomation = "0.18.0"
windows = { version = "0.61.1", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
regex = "1.5"
winapi = { version = "0.3", features = ["winuser"] } 
winnow = "0.7.9"
# chrono = "0.4.41"
display-info = "0.5.4"
fs_extra = "1.3.0"

chrono.workspace = true